- Add support for DOT in addresses (RFC5322, 4.1. Miscellaneous Obsolete Tokens)

- libsieve is now reentrant

- Add SILENT_RULES to Makefile.am

- Move all Makefile.am-s to single /Makefile.am

- Move the build root from /src/ to /

libSieve 2.2.8
--------------

- Handle empty addresses (thanks to Dilyan Palauzov).

- Short-circuit all(tests) as soon as a test fails (thanks to Dilyan Palauzov).

- Short-circuit any(tests) as soon as a test succeeds (thanks to Dilyan Palauzov).

- Check that 'myaddr' is among those specified in the script (thanks to Paul Stevens).

- Add AM_MAINTAINER_MODE to only rebuild flex/bison sources if required.

libSieve 2.2.7
--------------

- Fixed a duplicate symbol definition (thanks to Wilfried Goesgens).

- Fixed a mismatched function declaration (thanks to Eugene Prokopiev).

- More cases where Vacation should be ignored (thanks to Dilyan Palauzov).

- Generate Vacation handle according to RFC 5230 (thanks to Dilyan Palauzov).

- Use of NULL without declaration (thanks to Dilyan Palauzov).

- Added pkgconfig support (thanks to Dilyan Palauzov).

- Documentation corrections (thanks to Dilyan Palauzov).

libSieve 2.2.6
--------------

- Fix for bracketed comments (thanks to Daniel Shahaf).

- More graceful handling of malformed addresses (thanks to Paul Stevens).

- Return header and address errors separately from script parse errors.

libSieve 2.2.5
--------------

- Allowed CFLAGS to pass through Makefile.am
  (thanks to Bernard Johnson).

- Use # instead of __STRING for assertion stringification.

- Fixed off-by-one when reallocing space for repeated headers
  (thanks to Petri Laine).

libSieve 2.2.4
--------------

- Improved several test scripts.

- Fixed a memory leak in header parsing.

- Fixed a memory leak in comparator lookup.

- Accepted patch from Steffen Schuetz to respect :from in vacation action.

libSieve 2.2.3
--------------

- Numeric relational comparators were backwards.

libSieve 2.2.2
--------------
